@@ -25,6 +25,7 @@ x2goclient (4.0.3.2-0x2go1) UNRELEASED; urgency=medium
       exist on the client. (Partially solves #405).
     - Fix string concatenation/layout of error message when tunnel I/O errors
       occur.
+    - Improve debugging/logging the SSH connections made by X2Go Client.
 
   [ Jason Alavaliant ]
   * New upstream verson (4.0.3.2):
